# SURFRAD

./: .gitignore  _version.py  conda_dependencies.yml  deprecated_setup.cfg  environment-docs.yml  environment.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml
SurfRadPy/: NCEI.py  aod2netcdf.py  aodinversion.py  qcrad2ncei.py  realtime_aod.py  surfrad.py
SurfRadPy/script_backends/: __init__.py  aod2netcdf.py
configuration_files/: config.ini
data/: Bondville_IL_1995_May_10.nc  SURFRAD_QCrad_metadata.cdl  SURFRAD_QCrad_metadata.txt  SURFRAD_QCrad_metadata_allison.txt  bon_19950510.qdat  metadata.json
deprecated_scripts/: deprecated_produce_aod2netcdf  produce_aodinversion  produce_aodinversion1  qcrad2ncei
deprecated_scripts/Radiation NetCDF Scripts/: _csv_to_nc.sh  headers_nc.txt  produce_aod2netcdf
deprecated_scripts/Radiation NetCDF Scripts/NetCDF_output/: Bondville_IL_1995_01_03.nc
doc/: Makefile  conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree  readme.doctree
doc/about/: changelog.rst  citation.rst  license.rst  scope.rst
doc/developer/: adding-a-retrieval.rst  contributing.rst  improve_this_documentation.rst
doc/getting_started/: configuration.rst  installation.rst  quickstart.rst
doc/notebooks/: index.rst
doc/reference/: api.rst  command-line-tools.rst  formats.rst
doc/source/: SurfRadPy.rst  modules.rst
doc/tutorials/: end-to-end-example.rst  first-steps.rst
doc/user-guide/: data-model.rst  io.rst  overview.rst
legacy_code/: aod_analysis.f  aod_code.f
notebooks/: netCDF_structure.ipynb
notebooks/databases/: MFRSR_History.xlsx  surfrad_database.db  surfrad_database_interface.ipynb
notebooks/development/: realtime_aod.ipynb  surfrad_radflux.ipynb
notebooks/production/: automations.ipynb
notebooks/qaqc/: realtime_AOD_quicklook.ipynb  surfrad_mfrsr_quicklooks.ipynb
scripts/: produce_aodinversion  produce_aodinversion1  produce_realtime_aod  qcrad2ncei
scripts/Radiation NetCDF Scripts/: _dat_to_csv.sh  add_metadata.py  csv_to_nc_daily.py  csv_to_nc_monthly.py  csv_to_nc_yearly.py  dat_to_csv.py  headers_csv.txt  headers_csv_RadFlux.txt  headers_nc_RadFlux.txt  nc_convert.py
surfradpy/: NCEI.py  __init__.py  aod2netcdf.py  aodinversion.py  config.py  database.py  mfr_raw2netcdf.py  radflux2netcdf.py  radiation.py  realtime_aod.py  surfrad.py
surfradpy/file_io/: mfrsr.py
surfradpy/products/: cl61_cloud_prod_lev1.py  mfr_raw2netcdf.py
surfradpy/scripts/: __init__.py  aod2netcdf.py  aodinversion.py  createlangleys.py  mfr_raw2netcdf.py  produce_realtime_aod.py  qcrad2ncei.py  radflux2netcdf.py  radiation2netcdf.py  surfrad_mfrsr_full_process.py  surfrad_mfrsr_raw2netcdf.py
(+46 files in other folders)
