[build-system]
requires = ["setuptools>=46.4.0", "wheel", "setuptools_scm"]
#requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surfradpy"
authors = [{ name = "Hagen Telg", email = "hagen.telg@gmail.com" }]
description = "Python library with tools for SURFRAD data processing."
license = { file = "LICENSE" }
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/hagne/SURFRAD"  # or your documentation URL
Repository = "https://github.com/hagne/SURFRAD"

[tool.setuptools]
packages = ["surfradpy"]

[tool.setuptools_scm]
write_to = "_version.py"  # Path to write the version file

[project.scripts]
produce_surfrad_mfrsr_full = "surfradpy.scripts.surfrad_mfrsr_full_process:run"
produce_surfrad_mfrsr2nc = "surfradpy.scripts.surfrad_mfrsr_raw2netcdf:run"
produce_aod2netcdf = "surfradpy.scripts.aod2netcdf:run"
qcrad2ncei = "surfradpy.scripts.qcrad2ncei:main"
aodinv1 = 'surfradpy.scripts.aodinversion:produce_aodinversion1_01'
aodinv1cu = 'surfradpy.scripts.aodinversion:produce_aodinversion1_01_catchup'
srf_aodrealtime = 'surfradpy.scripts.produce_realtime_aod:routine'
produce_aod_realtime_catchup = 'surfradpy.scripts.produce_realtime_aod:catchup'
radflux2netcdf = 'surfradpy.scripts.radflux2netcdf:main'
radiation2netcdf = 'surfradpy.scripts.radiation2netcdf:main'
srf_langleys = 'surfradpy.scripts.createlangleys:main'
